--- a/iframe.html
+++ b/iframe.html
@@ -529,7 +529,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CyRRa8Py.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-i4Ba95kf.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/preload-helper-PPVm8Dsz.js">
     <link rel="stylesheet" crossorigin href="./assets/iframe-CWjbOi6z.css">
   </head>
